removed my own caching system in place of Spring's built-in solution